fix(-):z-index modal

--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ h1 {
 
         .video {
             position: relative;
-            z-index: -5;
+            z-index: 1;
         }
     }
 }
