--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -1,6 +1,7 @@
 .modal {
     position: absolute;
     inset: 0;
+    z-index: 10;
     background-color: rgba(255, 255, 255, 0.015);
     width: 100%;
     height: 100%;
